objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Lost_Reason__c</fullName>
        <label>Lost Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Timing</fullName>
                </value>
                <value>
                    <fullName>Value</fullName>
                </value>
                <value>
                    <fullName>Applicant Rejected(Basic Checking)</fullName>
                </value>
                <value>
                    <fullName>Application Expired</fullName>
                </value>
                <value>
                    <fullName>Competitor Financial Institutions</fullName>
                </value>
                <value>
                    <fullName>Credit/Chex</fullName>
                </value>
                <value>
                    <fullName>Debt To Income Ratio</fullName>
                </value>
                <value>
                    <fullName>Declined Loan</fullName>
                </value>
                <value>
                    <fullName>Derogatory History</fullName>
                </value>
                <value>
                    <fullName>Failed Eligibility</fullName>
                </value>
                <value>
                    <fullName>Failed PID/FIS</fullName>
                </value>
                <value>
                    <fullName>Fraud</fullName>
                </value>
                <value>
                    <fullName>Lack of Credit</fullName>
                </value>
                <value>
                    <fullName>Loan To Value</fullName>
                </value>
                <value>
                    <fullName>Member State of Mind Changed</fullName>
                </value>
                <value>
                    <fullName>Rate</fullName>
                </value>
                <value>
                    <fullName>Structure Rejected</fullName>
                </value>
                <value>
                    <fullName>Unsecured To Income</fullName>
                </value>
                <value>
                    <fullName>Abandoned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mailing_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Mailing Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Make__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Make</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MemberNumber__c</fullName>
        <description>Used by data loads to automatically link to an account/contact.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Member Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Member Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Outside_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Member/Outside Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Member_Since__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Member Since</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Minor_Account_Type__c</fullName>
        <label>Minor Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Branch New Auto</fullName>
                </value>
                <value>
                    <fullName>Branch RV</fullName>
                </value>
                <value>
                    <fullName>Branch Used Auto</fullName>
                </value>
                <value>
                    <fullName>Indirect New Auto</fullName>
                </value>
                <value>
                    <fullName>Indirect Used Auto</fullName>
                </value>
                <value>
                    <fullName>Indirect RV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Model</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mortgage_Power_of_One__c</fullName>
        <description>Power of one formula for computing opportunity incentives based on the quantity of mortgages sold.</description>
        <formula>IF(ISPICKVAL(Product__c, &apos;Mortgage&apos;), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mortgage Power of One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mortgage__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Mortgage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Applications__c</fullName>
        <label>Number of Applications</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OpportunityOrigin__c</fullName>
        <description>The origin/channel that the opportunity was started from.</description>
        <label>Opportunity Origin</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In-Lobby Teller</fullName>
                </value>
                <value>
                    <fullName>Video Chat - Branch</fullName>
                </value>
                <value>
                    <fullName>Video Chat - Mobile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Classification__c</fullName>
        <description>For Community Involvement web to lead</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Opportunity Classification</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_Role__c</fullName>
        <description>Show the role of the Owner of this Opportunity</description>
        <formula>Owner.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Organization City</label>
        <length>189</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Organization Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Other Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Financial_Institution__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Other Financial Institution</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Products_Compensation__c</fullName>
        <description>Flat-rate incentive compensations for new accounts.</description>
        <formula>CASE( Product__c ,

&quot;Checking Account&quot; , 25 ,

&quot;EZ Pay&quot; , 2 ,

&quot;Savings&quot; , 5 ,

&quot;Business CD&quot; , 50 ,
&quot;Business Checking&quot; , 50 ,
&quot;Business Money Market Savings&quot; , 50 ,
&quot;Business Premium Money Market&quot; , 50 ,
&quot;Business Secondary Savings&quot; , 50 ,

NULL )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other Products Compensation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__Deposits_FS_Average_Assets__c</fullName>
        <description>PrecisionLender All Deposits Average Assets</description>
        <inlineHelpText>PrecisionLender All Deposits Average Assets</inlineHelpText>
        <label>Deposits Average Assets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__Deposits_FS_Average_Equity__c</fullName>
        <description>PrecisionLender All Deposits Average Equity</description>
        <inlineHelpText>PrecisionLender All Deposits Average Equity</inlineHelpText>
        <label>Deposits Average Equity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__Deposits_FS_Interest_Expense__c</fullName>
        <description>PrecisionLender All Deposits Interest Expense</description>
        <inlineHelpText>PrecisionLender All Deposits Interest Expense</inlineHelpText>
        <label>Deposits Interest Expense</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__Deposits_FS_Interest_Income__c</fullName>
        <description>PrecisionLender All Deposits Interest Income</description>
        <inlineHelpText>PrecisionLender All Deposits Interest Income</inlineHelpText>
        <label>Deposits Interest Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__Deposits_FS_Loan_Loss_Reserves__c</fullName>
        <description>PrecisionLender All Deposits Loan Loss Reserves</description>
        <inlineHelpText>PrecisionLender All Deposits Loan Loss Reserves</inlineHelpText>
        <label>Deposits Loan Loss Reserves</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__Deposits_FS_Net_Income__c</fullName>
        <description>PrecisionLender All Deposits Net Income</description>
        <inlineHelpText>PrecisionLender All Deposits Net Income</inlineHelpText>
        <label>Deposits Net Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__Deposits_FS_Net_Interest_Income__c</fullName>
        <description>PrecisionLender All Deposits Net Interest Income</description>
        <inlineHelpText>PrecisionLender All Deposits Net Interest Income</inlineHelpText>
        <label>Deposits Net Interest Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__Deposits_FS_Non_Interest_Expense__c</fullName>
        <description>PrecisionLender All Deposits Non Interest Expense</description>
        <inlineHelpText>PrecisionLender All Deposits Non Interest Expense</inlineHelpText>
        <label>Deposits Non Interest Expense</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__Deposits_FS_Other_Income__c</fullName>
        <description>PrecisionLender All Deposits Other Income</description>
        <inlineHelpText>PrecisionLender All Deposits Other Income</inlineHelpText>
        <label>Deposits Other Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__Deposits_FS_Pre_Tax_Income__c</fullName>
        <description>PrecisionLender All Deposits Pre-Tax Income</description>
        <inlineHelpText>PrecisionLender All Deposits Pre-Tax Income</inlineHelpText>
        <label>Deposits Pre-Tax Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__Deposits_FS_ROA__c</fullName>
        <description>PrecisionLender All Deposits ROA</description>
        <inlineHelpText>PrecisionLender All Deposits ROA</inlineHelpText>
        <label>Deposits ROA</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PLNDR__Deposits_FS_ROE__c</fullName>
        <description>PrecisionLender All Deposits ROE</description>
        <inlineHelpText>PrecisionLender All Deposits ROE</inlineHelpText>
        <label>Deposits ROE</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PLNDR__Deposits_FS_Target_ROE__c</fullName>
        <description>PrecisionLender All Deposits Target ROE</description>
        <inlineHelpText>PrecisionLender All Deposits Target ROE</inlineHelpText>
        <label>Deposits Target ROE</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PLNDR__Deposits_FS_Taxes__c</fullName>
        <description>PrecisionLender All Deposits Taxes</description>
        <inlineHelpText>PrecisionLender All Deposits Taxes</inlineHelpText>
        <label>Deposits Taxes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_Average_Assets__c</fullName>
        <description>FS_Average_Assets</description>
        <inlineHelpText>FS_Average_Assets</inlineHelpText>
        <label>Average Assets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_Average_Equity__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Average Equity</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement Average Equity</inlineHelpText>
        <label>Average Equity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_Average_Yield__c</fullName>
        <description>This is the average interest income divided by the average outstanding assets.</description>
        <formula>if( PLNDR__FS_Average_Assets__c &gt; 0, PLNDR__FS_Interest_Income__c / PLNDR__FS_Average_Assets__c , null )</formula>
        <inlineHelpText>This is the average interest income divided by the average outstanding assets.</inlineHelpText>
        <label>Average Yield</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_Deposit_Average_Balance__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Deposit Average Balance</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement Deposit Average Balance</inlineHelpText>
        <label>Average Deposit Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_Interest_Expense__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Interest Expense</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement Interest Expense</inlineHelpText>
        <label>Interest Expense</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_Interest_Income__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Interest Income</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement Interest Income</inlineHelpText>
        <label>Interest Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_Loan_Average_Balance__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Loan Average Balance</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement Loan Average Balance</inlineHelpText>
        <label>Loan Average Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_Loan_Commitment__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Loan Commitment</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement Loan Commitment</inlineHelpText>
        <label>Loan Commitment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_Loan_Gross_Funding__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Loan Gross Funding</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement Loan Gross Funding</inlineHelpText>
        <label>Loan Gross Funding</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_Loan_Loss_Reserves__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Loan Loss Reserves</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement Loan Loss Reserves</inlineHelpText>
        <label>Loan Loss Reserves</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_Loan_Net_Commitment__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Loan Net Commitment</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement Loan Net Commitment</inlineHelpText>
        <label>Loan Net Commitment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_Loan_Net_Funding__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Loan Net Funding</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement Loan Net Funding</inlineHelpText>
        <label>Loan Net Funding</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_Net_Income__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Net Income</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement Net Income</inlineHelpText>
        <label>Net Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_Net_Interest_Income__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Net Interest Income</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement Net Interest Income</inlineHelpText>
        <label>Net Interest Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_Net_Interest_Margin__c</fullName>
        <description>This is the Net Interest Margin - the Net Interest Income divided by the Average Outstanding Assets.</description>
        <formula>IF( PLNDR__FS_Average_Assets__c &gt; 0, PLNDR__FS_Net_Interest_Income__c / PLNDR__FS_Average_Assets__c, null )</formula>
        <inlineHelpText>This is the Net Interest Margin - the Net Interest Income divided by the Average Outstanding Assets.</inlineHelpText>
        <label>Net Interest Margin</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_Non_Interest_Expense__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Non Interest Expense</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement Non Interest Expense</inlineHelpText>
        <label>Non Interest Expense</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_Other_Income__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Other Income</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement Other Income</inlineHelpText>
        <label>Other Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_Pre_Tax_Income__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Pre-Tax Income</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement Pre-Tax Income</inlineHelpText>
        <label>Pre-Tax Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_ROA__c</fullName>
        <description>PrecisionLender Scenario Financial Statement ROA</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement ROA</inlineHelpText>
        <label>ROA</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_ROE__c</fullName>
        <description>PrecisionLender Scenario Financial Statement ROE</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement ROE</inlineHelpText>
        <label>ROE</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_Target_Net_Income__c</fullName>
        <description>PrecisionLender Target Net Income</description>
        <inlineHelpText>PrecisionLender Target Net Income</inlineHelpText>
        <label>Target Net Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_Target_ROA__c</fullName>
        <description>PrecisionLender Target ROA</description>
        <inlineHelpText>PrecisionLender Target ROA</inlineHelpText>
        <label>Target ROA</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_Target_ROE__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Target ROE</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement Target ROE</inlineHelpText>
        <label>Target ROE</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_Taxes__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Taxes</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement Taxes</inlineHelpText>
        <label>Taxes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__Loan_Initial_Fees__c</fullName>
        <description>Precision Lender Opportunity Initial Fees</description>
        <inlineHelpText>These fees are amortized into the margin and are not directly reflected on the financial statement</inlineHelpText>
        <label>Loan Initial Fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__Loans_FS_Average_Assets__c</fullName>
        <description>PrecisionLender All Loans Average Assets</description>
        <inlineHelpText>PrecisionLender All Loans Average Assets</inlineHelpText>
        <label>Loans Average Assets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__Loans_FS_Average_Equity__c</fullName>
        <description>PrecisionLender All Loans Average Equity</description>
        <inlineHelpText>PrecisionLender All Loans Average Equity</inlineHelpText>
        <label>Loans Average Equity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__Loans_FS_Interest_Expense__c</fullName>
        <description>PrecisionLender All Loans Interest Expense</description>
        <inlineHelpText>PrecisionLender All Loans Interest Expense</inlineHelpText>
        <label>Loans Interest Expense</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__Loans_FS_Interest_Income__c</fullName>
        <description>PrecisionLender All Loans Interest Income</description>
        <inlineHelpText>PrecisionLender All Loans Interest Income</inlineHelpText>
        <label>Loans Interest Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__Loans_FS_Loan_Loss_Reserves__c</fullName>
        <description>PrecisionLender All Loans Loan Loss Reserves</description>
        <inlineHelpText>PrecisionLender All Loans Loan Loss Reserves</inlineHelpText>
        <label>Loans Loan Loss Reserves</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__Loans_FS_Net_Income__c</fullName>
        <description>PrecisionLender All Loans Net Income</description>
        <inlineHelpText>PrecisionLender All Loans Net Income</inlineHelpText>
        <label>Loans Net Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__Loans_FS_Net_Interest_Income__c</fullName>
        <description>PrecisionLender All Loans Net Interest Income</description>
        <inlineHelpText>PrecisionLender All Loans Net Interest Income</inlineHelpText>
        <label>Loans Net Interest Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__Loans_FS_Non_Interest_Expense__c</fullName>
        <description>PrecisionLender All Loans Non Interest Expense</description>
        <inlineHelpText>PrecisionLender All Loans Non Interest Expense</inlineHelpText>
        <label>Loans Non Interest Expense</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__Loans_FS_Other_Income__c</fullName>
        <description>PrecisionLender All Loans Other Income</description>
        <inlineHelpText>PrecisionLender All Loans Other Income</inlineHelpText>
        <label>Loans Other Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__Loans_FS_Pre_Tax_Income__c</fullName>
        <description>PrecisionLender All Loans Pre-Tax Income</description>
        <inlineHelpText>PrecisionLender All Loans Pre-Tax Income</inlineHelpText>
        <label>Loans Pre-Tax Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__Loans_FS_ROA__c</fullName>
        <description>PrecisionLender All Loans ROA</description>
        <inlineHelpText>PrecisionLender All Loans ROA</inlineHelpText>
        <label>Loans ROA</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PLNDR__Loans_FS_ROE__c</fullName>
        <description>PrecisionLender All Loans ROE</description>
        <inlineHelpText>PrecisionLender All Loans ROE</inlineHelpText>
        <label>Loans ROE</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PLNDR__Loans_FS_Target_ROE__c</fullName>
        <description>PrecisionLender All Loans Target ROE</description>
        <inlineHelpText>PrecisionLender All Loans Target ROE</inlineHelpText>
        <label>Loans Target ROE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PLNDR__Loans_FS_Taxes__c</fullName>
        <description>PrecisionLender All Loans Taxes</description>
        <inlineHelpText>PrecisionLender All Loans Taxes</inlineHelpText>
        <label>Loans Taxes</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Notes from the PrecisionLender Opportunity&apos;s Notes section</inlineHelpText>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PLNDR__Others_FS_Average_Assets__c</fullName>
        <description>PrecisionLender All Others Average Assets</description>
        <inlineHelpText>PrecisionLender All Others Average Assets</inlineHelpText>
        <label>Others Average Assets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__Others_FS_Average_Equity__c</fullName>
        <description>PrecisionLender All Others Average Equity</description>
        <inlineHelpText>PrecisionLender All Others Average Equity</inlineHelpText>
        <label>Others Average Equity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__Others_FS_Interest_Expense__c</fullName>
        <description>PrecisionLender All Others Interest Expense</description>
        <inlineHelpText>PrecisionLender All Others Interest Expense</inlineHelpText>
        <label>Others Interest Expense</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__Others_FS_Interest_Income__c</fullName>
        <description>PrecisionLender All Others Interest Income</description>
        <inlineHelpText>PrecisionLender All Others Interest Income</inlineHelpText>
        <label>Others Interest Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__Others_FS_Loan_Loss_Reserves__c</fullName>
        <description>PrecisionLender All Others Loan Loss Reserves</description>
        <inlineHelpText>PrecisionLender All Others Loan Loss Reserves</inlineHelpText>
        <label>Others Loan Loss Reserves</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__Others_FS_Net_Income__c</fullName>
        <description>Others Net Income</description>
        <inlineHelpText>PrecisionLender All Others Net Income</inlineHelpText>
        <label>Others Net Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__Others_FS_Net_Interest_Income__c</fullName>
        <description>PrecisionLender All Others Net Interest Income</description>
        <inlineHelpText>PrecisionLender All Others Net Interest Income</inlineHelpText>
        <label>Others Net Interest Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__Others_FS_Non_Interest_Expense__c</fullName>
        <description>PrecisionLender All Others Non Interest Expense</description>
        <inlineHelpText>PrecisionLender All Others Non Interest Expense</inlineHelpText>
        <label>Others Non Interest Expense</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__Others_FS_Other_Income__c</fullName>
        <description>PrecisionLender All Others Other Income</description>
        <inlineHelpText>PrecisionLender All Others Other Income</inlineHelpText>
        <label>Others Other Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__Others_FS_Pre_Tax_Income__c</fullName>
        <description>PrecisionLender All Others Pre-Tax Income</description>
        <inlineHelpText>PrecisionLender All Others Pre-Tax Income</inlineHelpText>
        <label>Others Pre-Tax Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__Others_FS_ROA__c</fullName>
        <description>PrecisionLender All Others ROA</description>
        <inlineHelpText>PrecisionLender All Others ROA</inlineHelpText>
        <label>Others ROA</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PLNDR__Others_FS_ROE__c</fullName>
        <description>PrecisionLender All  Others ROE</description>
        <inlineHelpText>PrecisionLender All  Others ROE</inlineHelpText>
        <label>Others ROE</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PLNDR__Others_FS_Target_ROE__c</fullName>
        <description>PrecisionLender All Others Target ROE</description>
        <inlineHelpText>PrecisionLender All Others Target ROE</inlineHelpText>
        <label>Others Target ROE</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
</CustomObject>